--- a/admin_panel/templates/orders.html
+++ b/admin_panel/templates/orders.html
@@ -63,7 +63,7 @@
         body{
         font-family: "Iranian Sans";
         }
-        h2{
+        h2, h5{
         font-family: "Iranian Sans";
         }
     </style>
@@ -144,33 +144,102 @@
                         <tbody>
                         <tr>
                             {% for data in orders_data %}
-                            <td class="center ">
+                            <td style="text-align: right;direction: rtl" class="center ">
                                 <div class="btn-group" role="group">
                                     <button type="button" class="btn btn-success btn-sm" style="float: right">
-
-                                        <i class="glyphicon glyphicon-zoom-in icon-white"></i>
-                                        نمایش
-
+چاپ
                                     </button>
-                                    <button type="button" class="btn btn-info btn-sm" style="float: right">
 
-                                        <i class="glyphicon glyphicon-edit icon-white"></i>
-                                        تغییر
-
-                                    </button>
-                                    <button type="button" class="btn btn-danger btn-sm" style="float: right">
-
-                                        <i class="glyphicon glyphicon-trash icon-white"></i>
-                                        حذف
-
-                                    </button>
                                 </div>
                             </td>
 
-                            <td>{{data.3}}</td>
-                            <td>{{data.2}}</td>
-                            <td>{{data.1}}</td>
-                            <td>{{data.0}}</td>
+                            <td style="text-align: right;direction: rtl;">{{data.3}}</td>
+                            <td>
+                          <!-- showingmodal -->
+  <div class="modal fade " id="showingmodal_product{{ data.0 }}" tabindex="0" role="dialog" aria-labelledby="showingmodal_product{{ data.0 }}" aria-hidden="true" style="padding-top: 9% ; ">
+  <div class="modal-dialog" role="document">
+    <div class="modal-content">
+      <div class="modal-header">
+        <h5 class="modal-title" id="exampleModalLongTitle" style="text-align:right ;  ">نمایش محصولات سفارشی</h5>
+        <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+          <span aria-hidden="true">&times;</span>
+        </button>
+      </div>
+      <div class="modal-body" >
+          <div class="container">
+              <div style="text-align: right;" class="row">
+                  <table class="table table-striped table-bordered bootstrap-datatable datatable responsive">
+                        <thead>
+                        <tr>
+                            <th style="text-align: right">قیمت</th>
+                            <th style="text-align: right">نام محصول</th>
+                            <th style="text-align: right">شماره محصول</th>
+                        </tr>
+                        </thead>
+                        <tbody>
+                        {% for product in data.2 %}
+                        <tr>
+                            <td style="text-align: right;direction: rtl">{{product.Price}}</td>
+                <td style="text-align: right;direction: rtl">{{product.Name}}</td>
+                <td style="text-align: right;direction: rtl">{{product.product_id}}</td>
+                      </tr>
+                        {% endfor %}
+                      </tbody>
+                      </table>
+              </div>
+      </div>
+          </div>
+      <div class="modal-footer">
+        <button type="button" class="btn btn-secondary" data-dismiss="modal">بستن</button>
+      </div>
+    </div>
+  </div>
+</div>
+
+<!-- /showingmodal -->
+                    <button type="button" class="btn btn-info btn-sm" style="float: right;border-radius: 10%;margin-right: 5%;font-size: x-small" data-toggle="modal" data-target="#showingmodal_product{{ data.0  }}">
+
+                            <i class="glyphicon glyphicon-search icon-white"></i>
+نمایش
+
+                    </button></td>
+                             <td>
+                          <!-- showingmodal -->
+  <div class="modal fade " id="showingmodal_customer{{ data.0 }}" tabindex="0" role="dialog" aria-labelledby="showingmodal_customer{{ data.0 }}" aria-hidden="true" style="padding-top: 9% ; ">
+  <div class="modal-dialog" role="document">
+    <div class="modal-content">
+      <div class="modal-header">
+        <h5 class="modal-title" id="exampleModalLongTitle" style="text-align:right ;  ">نمایش مشخصات سفارش دهنده</h5>
+        <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+          <span aria-hidden="true">&times;</span>
+        </button>
+      </div>
+      <div class="modal-body" >
+          <div class="container">
+              <div style="text-align: right;float: right;direction: rtl;" class="row">
+                  <p class="col-md-2">{{data.1.f_name}}</p>
+                  <p class="col-md-2">{{data.1.l_name}}</p>
+                  <p class="col-md-2">{{data.1.address}}</p>
+                  <p class="col-md-2">{{data.1.phone}}</p>
+                  <p class="col-md-2">{{data.1.username}}</p>
+              </div>
+      </div>
+          </div>
+      <div class="modal-footer">
+        <button type="button" class="btn btn-secondary" data-dismiss="modal">بستن</button>
+      </div>
+    </div>
+  </div>
+</div>
+
+<!-- /showingmodal -->
+                    <button type="button" class="btn btn-info btn-sm" style="float: right;border-radius: 10%;margin-right: 5%;font-size: x-small" data-toggle="modal" data-target="#showingmodal_customer{{ data.0  }}">
+
+                            <i class="glyphicon glyphicon-search icon-white"></i>
+نمایش
+
+                    </button></td>
+                            <td style="text-align: right">{{data.0}}</td>
 
                         </tr>
                         {% endfor %}
@@ -195,6 +264,9 @@
         <p style="text-align: center" class="col-md-offset-3 col-sm-offset-3col-md-6 col-sm-6 col-xs-12 copyright">&copy; <a href="#" target="_blank">طراحی شده توسط تیم بات گرام</a></p>
     </footer>
 
-
+<script src="https://code.jquery.com/jquery-3.1.1.slim.min.js" integrity="sha384-A7FZj7v+d/sdmMqp/nOQwliLvUsJfDHW+k9Omg/a/EheAdgtzNs3hpfag6Ed950n" crossorigin="anonymous"></script>
+<script src="https://cdnjs.cloudflare.com/ajax/libs/tether/1.4.0/js/tether.min.js" integrity="sha384-DztdAPBWPRXSA/3eYEEUWrWCy7G5KFbe8fFjk5JAIxUYHKkDx6Qin1DkWx51bBrb" crossorigin="anonymous"></script>
+<script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-alpha.6/js/bootstrap.min.js" integrity="sha384-vBWWzlZJ8ea9aCX4pEW3rVHjgjt7zpkNpZk+02D9phzyeVkE+jo0ieGizqPLForn" crossorigin="anonymous"></script>
+<!-- external javascript -->
 </body>
 </html>
