--- a/admin_panel/templates/orders.html
+++ b/admin_panel/templates/orders.html
@@ -135,6 +135,7 @@
                         <thead>
                         <tr>
                             <th style="text-align: right">چاپ فاکتور</th>
+                            <th style="text-align: right">تایید دریافت محصول</th>
                             <th style="text-align: right">توضیحات سفارش</th>
                             <th style="text-align: right">مشاهده محصولات سفارشی</th>
                             <th style="text-align: right">مشخصات سفارش دهنده</th>
@@ -153,7 +154,62 @@
                                 </div>
                             </td>
 
-                            <td style="text-align: right;direction: rtl;">{{data.3}}</td>
+                            <td style="text-align: right;direction: rtl" class="center ">
+                                <div class="btn-group" role="group">
+
+                                        {% if data.5 == 0 %}
+                                    <a href="arrived?o_id={{data.0}}">
+                                        <button type="button" class="btn btn-success btn-sm" style="float: right">
+                                        <i class="glyphicon glyphicon-shopping-cart icon-white"></i>
+                                    </button>
+                                        </a>
+                                        {% endif %}
+                                        {% if data.5 == 1 %}
+
+                                        <i style="font-size: 30px;text-align: center;" class="glyphicon glyphicon-send"></i>
+
+                                        {% endif %}
+
+
+
+                                </div>
+                            </td>
+
+                            <td style="text-align: right;direction: rtl;">{{data.3}}<br><br><button type="button" class="btn btn-success btn-sm" data-toggle="modal" data-target="#showingmodal_edit{{ data.0  }}" style="float: right">
+ویرایش
+                                    </button>
+                              <!-- showingmodal -->
+  <div class="modal fade " id="showingmodal_edit{{ data.0 }}" tabindex="0" role="dialog" aria-labelledby="showingmodal_edit{{ data.0 }}" aria-hidden="true" style="padding-top: 9% ; ">
+  <div class="modal-dialog" role="document">
+    <div class="modal-content">
+      <div class="modal-header">
+        <h5 class="modal-title" id="exampleModalLongTitle" style="text-align:right ;  ">ویرایش توضیحات</h5>
+        <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+          <span aria-hidden="true">&times;</span>
+        </button>
+      </div>
+      <div class="modal-body" >
+          <div class="container">
+              <div class="row">
+                <form action="editDescription" method="post">
+                  <div class="form-group">
+                    <p for="description">توضیحات</p>
+                    <textarea style="width: 250%;" id="description" name="edit_description">{{data.3}}</textarea>
+                      <input hidden="hidden" name="order_id" value="{{data.0}}">
+                  </div>
+                  <button type="submit" class="btn btn-success">ویرایش</button>
+                </form>
+              </div>
+      </div>
+          </div>
+      <div class="modal-footer">
+        <button type="button" class="btn btn-secondary" data-dismiss="modal">بستن</button>
+      </div>
+    </div>
+  </div>
+</div>
+
+<!-- /showingmodal --></td>
                             <td>
                           <!-- showingmodal -->
   <div class="modal fade " id="showingmodal_product{{ data.0 }}" tabindex="0" role="dialog" aria-labelledby="showingmodal_product{{ data.0 }}" aria-hidden="true" style="padding-top: 9% ; ">
