--- a/admin_panel/templates/show_survey.html
+++ b/admin_panel/templates/show_survey.html
@@ -116,10 +116,10 @@
         <tr>
 
 
+            {% for survey in survey_data %}
 
-            {% for data in survey_data %}
 <td style=" width: 16%;" class="center ">
-  <div class="modal fade " id="surveymodal{{ data.0 }}" tabindex="0" role="dialog" aria-labelledby="surveymodal{{ data.0 }}" aria-hidden="true" style="padding-top: 9% ; ">
+  <div class="modal fade " id="surveymodal{{ survey.id }}" tabindex="0" role="dialog" aria-labelledby="surveymodal{{ survey.id }}" aria-hidden="true" style="padding-top: 9% ; ">
   <div class="modal-dialog" role="document">
     <div class="modal-content" style="width: 100%">
       <div class="modal-header">
@@ -145,12 +145,12 @@
             <tbody>
 
 
-            {%  for question in data.4 %}
+            {%  for question in survey.questions %}
             <tr>
 
 
-                <td>{{  question }}
-                <a href="/admin-panel/del_survey?q_id={{ data.0 }}">
+                <td>{{  question.text }}
+                <a href="/admin-panel/del_question?q_id={{ question.id }}">
                     <button type="button" class="btn btn-danger btn-sm" style="float: right;border-radius: 10%;margin-right: 5%;font-size: x-small">
 
                             <i class="glyphicon glyphicon-trash icon-white"></i>
@@ -181,7 +181,7 @@
 
 
                 <div class="row">
-                 <a href="/admin-panel/del_survey?s_id={{data.0}}">
+                 <a href="/admin-panel/del_survey?s_id={{survey.id}}">
                  <button type="button" class="btn btn-danger btn-sm" style="float: right;border-radius: 10%;margin-right: 5%;font-size: x-small">
 
                             <i class="glyphicon glyphicon-trash icon-white"></i>
@@ -198,13 +198,13 @@
                 <td>
                     <div class="row">
 
-                 <button  type="button" class="btn btn-success btn-sm"  style="float: right;border-radius: 10%;margin-right: 5%;font-size: x-small" data-toggle="modal" data-target="#surveymodal{{ data.0  }}">
+                 <button  type="button" class="btn btn-success btn-sm"  style="float: right;border-radius: 10%;margin-right: 5%;font-size: x-small" data-toggle="modal" data-target="#surveymodal{{ survey.id  }}">
 
                             <i class="glyphicon glyphicon-zoom-in icon-white"></i>نمایش
                     </button></a>
                 </div></td>
-                <td style="text-align: right;direction: rtl">{{data.1}}</td>
-                <td style="text-align: right;direction: rtl">{{data.2}}</td>
+                <td style="text-align: right;direction: rtl">{{survey.title}}</td>
+                <td style="text-align: right;direction: rtl">{{survey.id}}</td>
 
 
         </tr>
