--- a/admin_panel/templates/category.html
+++ b/admin_panel/templates/category.html
@@ -82,7 +82,7 @@
                 <i class="glyphicon glyphicon-trash icon-white"></i>
                 حذف
             </a>
-                <a class="btn btn-info" >
+                <a class="btn btn-info" href="/admin-panel/ed_cat?cat_id={{cat.0}}">
                 <i class="glyphicon glyphicon-edit icon-white"></i>
                     تغییر
             </a>
