--- a/admin_panel/templates/showing.html
+++ b/admin_panel/templates/showing.html
@@ -271,7 +271,7 @@
       <div class="modal-body" >
           <div class="container">
               <div class="row">
-                  <img src="{{data.4}}" class="img img-thumbnail img-responsive">
+                  <img src="{{data.4}}" class="img img-thumbnail img-responsive " style="margin-left: 25%">
               </div>
       </div>
           </div>
