--- a/admin_panel/templates/header.html
+++ b/admin_panel/templates/header.html
@@ -1,14 +1,36 @@
+{% load static %}
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <meta charset="UTF-8">
-    <title>Title</title>
+
+    <meta charset="utf-8">
+    <title>
+        پنل ادمین بات‌گرام
+    </title>
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
+    <!-- jQuery -->
+    <script src="{% static 'adminpanel/bower_components/jquery/jquery.min.js' %}"></script>
+    <style>
+        @font-face {
+            font-family: "Iranian Sans";
+            src: url({% static 'adminpanel/fonts/iraniansans.ttf' %});
+        }
+
+        body {
+            font-family: "Iranian Sans";
+        }
+
+        h2, h5 {
+            font-family: "Iranian Sans";
+        }
+    </style>
 </head>
 <body>
 <div class="navbar navbar-default" role="navigation">
 
-    <div class="navbar-inner">
-        <a style="font-family: 'Iranian Sans'" class="navbar-brand" href="index.html">بات گرام</a>
+    <div style="padding: 1% 3% 1% 5%;" class="navbar-inner">
+        <a style="font-family: 'Iranian Sans';letter-spacing: 0px;font-size: x-large;" class="navbar-brand" href="index.html">بات گرام</a>
 
         <div class="btn-group pull-right" role="group">
             <button type="button" class="btn btn-default"><a href="/admin-panel/codes.html"> کد تخفیف</a></button>
@@ -16,31 +38,42 @@
             <button type="button" class="btn btn-default"><a href="/admin-panel/show_survey.html"> نظرسنجی</a></button>
             <button type="button" class="btn btn-default"><a href="/admin-panel/orders.html">سفارشات</a></button>
             <button type="button" class="btn btn-default"><a href="/admin-panel/comments.html"> نظرات</a></button>
-            <button type="button" class="btn btn-default"><a href="/admin-panel/category.html"> دسته بندی ها</a></button>
-            <button type="button" class="btn btn-default"><a href="/admin-panel/enteghadat.html"> انتقادات پیشنهادات</a></button>
+            <button type="button" class="btn btn-default"><a href="/admin-panel/category.html"> دسته بندی ها</a>
+            </button>
+            <button type="button" class="btn btn-default"><a href="/admin-panel/enteghadat.html"> انتقادات پیشنهادات</a>
+            </button>
             <button type="button" class="btn btn-default"><a href="/admin-panel/showing.html"> مشاهده کردن</a></button>
 
             <button type="button" class="btn btn-info dropdown-toggle" data-toggle="dropdown" aria-haspopup="true"
                     aria-expanded="false">
-                افزودن
+ <span class="caret"></span>               افزودن
             </button>
-
             <ul class="dropdown-menu" aria-labelledby="dropdownMenuDivider">
-                <li class="dropdown-item" href="adding.html" style="padding-left: 30%"><a href="/admin-panel/adding.html">افزودن محصول</a></li>
-                <li class="dropdown-item" href="add_cat.html" style="padding-left: 20%"><a href="/admin-panel/add_cat.html">افزودن دسته بندی</a></li>
-                <li class="dropdown-item" href="add_feed_cat" style="padding-left:45%"><a href="/admin-panel/add_feed_cat.html">افزودن نظر</a></li>
-                <li class="dropdown-item" href="survey.html" style="padding-left:24%"><a href="/admin-panel/survey.html">افزودن نظرسنجی</a></li>
-                <li class="dropdown-item" href="add_ad.html" style="padding-left:30%"><a href="/admin-panel/add_ad.html">افزودن تبلیغات</a></li>
-                <li class="dropdown-item" href="add_code.html" style="padding-left:22%"><a href="/admin-panel/add_code.html">افزودن کد تخفیف</a></li>
+                <li class="dropdown-item" href="adding.html" style="padding-left: 30%"><a
+                        href="/admin-panel/adding.html">افزودن محصول</a></li>
+                <li class="dropdown-item" href="add_cat.html" style="padding-left: 20%"><a
+                        href="/admin-panel/add_cat.html">افزودن دسته بندی</a></li>
+                <li class="dropdown-item" href="add_feed_cat" style="padding-left:45%"><a
+                        href="/admin-panel/add_feed_cat.html">افزودن نظر</a></li>
+                <li class="dropdown-item" href="survey.html" style="padding-left:24%"><a
+                        href="/admin-panel/survey.html">افزودن نظرسنجی</a></li>
+                <li class="dropdown-item" href="add_ad.html" style="padding-left:30%"><a
+                        href="/admin-panel/add_ad.html">افزودن تبلیغات</a></li>
+                <li class="dropdown-item" href="add_code.html" style="padding-left:22%"><a
+                        href="/admin-panel/add_code.html">افزودن کد تخفیف</a></li>
 
 
-                </ul>
-
-
-            </div>
+            </ul>
 
 
         </div>
+
+
     </div>
+</div>
+
+<script src="https://cdnjs.cloudflare.com/ajax/libs/bootstrap-select/1.12.4/js/bootstrap-select.min.js"></script>
+<script src="https://cdnjs.cloudflare.com/ajax/libs/bootstrap-select/1.12.4/js/i18n/defaults-*.min.js"></script>
+<script src="{% static 'adminpanel/bower_components/bootstrap/dist/js/bootstrap.min.js' %}"></script>
 </body>
 </html>
